<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flags (Alpha)</string>
    <string name="action_settings">Settings</string>
    <string name="button_txt">Update Country/Size!</string>
    <string name="us">USA</string>
    <string name="japan">Japan</string>
    <string name="mexican">Mexico</string>
    <string name="disney">DIS</string>
    <string name="destroy">Destroy the World!</string>
    <string name="small">25%</string>
    <string name="mid">50%</string>
	<string name= "large">100%</string>
	<string name= "text">Sizes</string>
	<string name= "country">Country</string>
	<string name="color">Background Color</string>
	<string name="black">Black</string>
	<string name="white">White</string>
	<string name="BC">BC Update</string>

    <string name="title_activity_spinner">SpinnerActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
